[gd_scene load_steps=3 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://dark_theme.tres" type="Theme" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -149.0
margin_top = -164.0
margin_right = 149.0
margin_bottom = -107.0
text = "Updating"

[node name="DownloadFileName" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -82.0
margin_right = 500.0
margin_bottom = -68.0
text = "Done"
align = 1

[node name="DownloadProgress" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -65.0
margin_right = 500.0
margin_bottom = -51.0
max_value = 1.0

[node name="DecompressFileName" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -39.0
margin_right = 500.0
margin_bottom = -25.0
text = "Done"
align = 1

[node name="DecompressProgress" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -22.0
margin_right = 500.0
margin_bottom = -8.0
max_value = 1.0

[connection signal="button_up" from="StartButton" to="." method="_on_StartButton_button_up"]
